<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rhodes</string>
    <string name="home">Home</string>
    <string name="refresh">Refresh</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="navigation">Navigation</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="sync">Sync</string>
    <string name="options">Options</string>
    <string name="logview">View Log</string>
    <string name="logoptions">Logging Options</string>
    <string name="no_files">This directory is empty</string>
    <string name="to_top">..</string>
    <string name="about_rhodes">Rhodes Version 1.0.0\n\nAuthor: Rhomobile\n\nSupport: all@rhomobile.com\n\n(c) Copyright (C) 2008 Rhomobile. All rights reserved.</string>
    <string name="db_schema">
	Drop Table If Exists [client_info];
	CREATE TABLE 'client_info' (
	'client_id' VARCHAR(255) PRIMARY KEY NOT NULL,
	'last_sync_success' VARCHAR(100) default NULL);
	Drop Table If Exists [object_values];
	CREATE TABLE 'object_values' (
	 'id' INTEGER PRIMARY KEY NOT NULL,
	 'token' varchar(30) default NULL,
	 'source_id' int(11) default NULL,
	 'attrib' varchar(255) default NULL,
	 'object' varchar(255) default NULL,
	 'value' text default NULL,
	 'update_type' varchar(255) default NULL,
	 'attrib_type' varchar(255) default NULL);
	Drop Table If Exists [sources];
	CREATE TABLE 'sources' (
	'id' INTEGER PRIMARY KEY,
	'token' varchar(30) default NULL,
	'source_id' int(11) default -1,
	'source_url' VARCHAR(255) default NULL,
	'session' VARCHAR(255) default NULL,
	'last_updated' int(11) default 0,
	'last_inserted_size' int(11) default 0,
	'last_deleted_size' int(11) default 0,
	'last_sync_duration' int(11) default 0,
	'last_sync_success' int(11) default 0);
	Drop Trigger If Exists [rhodeleteTrigger];
	Drop Index  If Exists [by_src_type];
	CREATE INDEX "by_src_type" ON "object_values" ("source_id", "attrib_type", "object");
	Drop Index  If Exists [by_type];
	CREATE INDEX "by_type" ON "object_values" ("attrib_type");
    </string>
	<string name="deleteTrigger">
	CREATE TRIGGER rhodeleteTrigger BEFORE DELETE ON object_values
	FOR EACH ROW
	BEGIN
	SELECT rhoOnDeleteObjectRecord(OLD.value,OLD.attrib_type,OLD.update_type);
	END;
	</string>    
</resources>
